--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "angular": "^1.5.8",
     "angular-material": "^1.0.9",
     "angular-route": "^1.5.8",
-    "angular-perfect-scrollbar": "^0.0.4"
+    "angular-perfect-scrollbar": "^0.0.4",
+    "jquery": "^3.1.1"
   }
 }
