initial d3 euqalizer visualisation added; requires the shift in logic code - play, pause, etc

--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "angular-material": "^1.0.9",
     "angular-route": "^1.5.8",
     "angular-perfect-scrollbar": "^0.0.4",
-    "jquery": "^3.1.1"
+    "jquery": "^3.1.1",
+    "d3": "^4.2.7"
   }
 }
